# CSharp_game

./: DEVKIT_UPDATE_CHECKLIST.md  DOCUMENTATION_UPDATED.md  INDEX.md  README.md  README_NEW.md  SETUP_COMPLETE.md  SETUP_GUIDE.txt  START.txt  build.sh
arm_dev/: CMakeLists.txt  COMPILE.md  Makefile  QUICK_REFERENCE.md  README.md  compile.sh  hello_world.elf  hello_world.map  hello_world.nro  setup.sh
arm_dev/src/: main.c
